# S24_Xing_Chen

./: CMakeLists.txt  README.md  S24_Xing_Chen.sln  unique.txt
Nugget/: CMakeLists.txt  Nugget.vcxproj  Nugget.vcxproj.filters  cpp.hint
Nugget/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Nugget/include/: Nugget.h
Nugget/src/: Image.cpp  Image.h  ImageImplement.h  NuggetApplication.cpp  NuggetApplication.h  NuggetEvents.cpp  NuggetEvents.h  NuggetKeys.h  NuggetWindow.cpp  NuggetWindow.h  Renderer.cpp  Renderer.h  RendererImplement.h  Shader.cpp  Shader.h  ShaderImplement.h  Unit.cpp  Unit.h  Utility.h  WindowImpl.h  pch.h
Nugget/src/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Nugget/src/codeOpenGL/: ImageOpenGL.cpp  ImageOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  Shader.cpp  ShaderOpenGL.cpp  ShaderOpenGL.h
S24_Xing_Chen/: CMakeLists.txt  Enemy.cpp  Enemy.h  Fireball.cpp  Fireball.h  MyGame.cpp  MyGame.h  Player.h  S24_Xing_Chen.vcxproj  S24_Xing_Chen.vcxproj.filters  Score.cpp  Score.h  Source.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
